# bcfcpp

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
docs/: bcfcpp.org
m4/: ax_cxx_compile_stdcxx.m4  ax_cxx_compile_stdcxx_20.m4
src/: Makefile.am  Makefile.in  bcf.hpp  bcfcpp.hpp  bgzcpp.hpp  compute_ad.cpp  duckdb.hpp  dup_vcf.cpp  header_info.cpp  hts_bcf_getlines.hpp  hts_includes.hpp  hts_ranges.hpp  htscpp.cpp  htscpp.hpp  left_join.cpp  semi_join.cpp  tabix.hpp  test_bcf.cpp  vcf_header.hpp  view_gt.cpp
