bin_PROGRAMS = dup_vcf header_info
dup_vcf_SOURCES = dup_vcf.cpp bcfcpp.hpp
dup_vcf_CPPFLAGS = $(HTS_CFLAGS) -I$(top_srcdir)/include
dup_vcf_LDFLAGS= $(HTS_LIBS)
header_info_SOURCES = header_info.cpp bcfcpp.hpp
header_info_CPPFLAGS = $(HTS_CFLAGS) -I$(top_srcdir)/include
header_info_LDFLAGS= $(HTS_LIBS)
include_HEADERS	= ../
